# KRINT

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  KRINT.slnx  README.md  application.properties  browser-main.yml  compose.dev.yml  compose.yml  krint.yaml  package-lock.json  package.json
.claude/: CLAUDE.md
.github/: release-drafter.yml
.github/workflows/: desktop-release.yaml  docker-publish-release.yaml  release.yaml  version-bump.yml
docs/: declarative-instances.md  desktop.md  dev-setup.md  engines.md  index.md  intro.md  nodes.md  package.json  self-host.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
e2e/: compose.e2e.yml  mock-oauth2-config.json
keycloak/: krint-realm.json
keycloak/keycloakify/: .gitignore  package.json  vite.config.ts
keycloak/keycloakify/src/: kc.gen.tsx  main.tsx
scripts/: publish-sidecar.mjs
src/: Directory.Build.props
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/loading/: index.html
src-tauri/resources/: krint.yaml
src-tauri/src/: lib.rs  main.rs  oidc.rs
src/KRINT.API/: BackupSchedulerHostedService.cs  Dockerfile  HttpCurrentUserService.cs  InstanceReconciliationHostedService.cs  KRINT.API.csproj  NodeReconciliationHostedService.cs  Program.cs  appsettings.json
src/KRINT.API/Controllers/: ActivityController.cs  AppController.cs  BackupsController.cs  DashboardController.cs  DatabaseController.cs  NodesController.cs  SettingsController.cs  TestController.cs
src/KRINT.API/Extensions/: KrintConfigExtensions.cs  MigrationExtensions.cs  SeedExtensions.cs
src/KRINT.API/Hubs/: ContainerHub.cs  DashboardHub.cs  MigrationHub.cs  NodeHub.cs
src/KRINT.API/Nodes/: DockerServiceResolver.cs  INodeRegistry.cs  LocalDockerServiceResolver.cs  NodeAgentHostedService.cs  NodeDtos.cs  NodeOfflineException.cs  (+5 more)
src/KRINT.Application/: ConfigManagedGuard.cs  ConnectionStringBuilder.cs  InnerDatabaseTargetLoader.cs  KRINT.Application.csproj  NodeFeatureGuard.cs  ReadinessProbe.cs
src/KRINT.Domain/: ActivityEntry.cs  BackupEntry.cs  BackupSchedule.cs  BaseEntity.cs  DatabaseInstance.cs  Node.cs  Secret.cs
src/KRINT.Frontend/: README.md  angular.json  openapitools.json  package.json
src/KRINT.Infrastructure/: KRINT.Infrastructure.csproj  KrintDbContext.cs
src/KRINT.Infrastructure.Migrations.Sqlite/: KRINT.Infrastructure.Migrations.Sqlite.csproj
src/KRINT.Tests/: KRINT.Tests.csproj
(+432 files in other folders)
