[package]
name = "krint-desktop"
version = "0.1.0"
description = "KRINT desktop app"
authors = ["KRINT"]
edition = "2021"

# The library is what Tauri (and the mobile entry points, if ever added) link against.
[lib]
name = "krint_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
base64 = "0.22"
url = "2"
# Embedded OIDC issuer (replaces the Docker mock-oauth2-server for desktop auth).
axum = "0.7"
tokio = { version = "1", features = ["rt", "net", "time", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9"
rsa = "0.9"
sha2 = "0.10"
